Retry access token, but with secret on github.com

--- a/posts/2020/2020-01-12-blog/index.mdx
+++ b/posts/2020/2020-01-12-blog/index.mdx
@@ -25,4 +25,4 @@ I have looked into Nikola, org-publish, Jeckyll and the likes, but never really 
 So now I have decided to see if I can start one from scratch, based on Gatsby:
 
 1. I started off with this factastic tutorial.
-2. I added a [Github workflow](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/configuring-a-workflow) inspired by [gatsby-starter-olga](https://github.com/orgapp/gatsby-starter-orga/blob/master/.github/workflows/ci.yml.)
+2. I added a [Github workflow](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/configuring-a-workflow) inspired by [gatsby-starter-olga](https://github.com/orgapp/gatsby-starter-orga/blob/master/.github/workflows/ci.yml)
