Publish: restored folder

--- a/posts/2020/2020-01-12-blog/index.mdx
+++ b/posts/2020/2020-01-12-blog/index.mdx
@@ -8,7 +8,7 @@ So, another attempt to start a blog.
 
 I have been looking for a platform to blog. It should support...
 
-* templates, features,
+* templates,
 * tags,
 * history and
 * search. 
@@ -18,11 +18,11 @@ On the technical side, I want it to...
 * be open source, 
 * allow me to edit the posts locally in any editor I please (which requires flat-file input),
 * support Markdown and (preferably) Org-mode input,
-* deploy to Github Pages (which requires output a static site (i.e. without backend))
+* deploy to Github Pages (which requires output a site without backend))
 
 I have looked into Nikola, org-publish, Jeckyll and the likes, but never really liked in.
 
 So now I have decided to see if I can start one from scratch, based on Gatsby:
 
-1. I started off with this factastic tutorial.
-2. I added a [Github workflow](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/configuring-a-workflow) inspired by [gatsby-starter-olga](https://github.com/orgapp/gatsby-starter-orga/blob/master/.github/workflows/ci.yml)
+1. I started off with this [fantastic tutorial](https://www.freecodecamp.org/news/build-a-developer-blog-from-scratch-with-gatsby-and-mdx/).
+2. I added a [Github pages publish workflow](https://github.com/marketplace/actions/deploy-to-github-pages) (inspired by [gatsby-starter-olga](https://github.com/orgapp/gatsby-starter-orga/blob/master/.github/workflows/ci.yml)). I also needed to [create a personal access token](https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line) and [store it as a secret](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets)
