Added pinned pages

--- a/posts/2020-01-12-blog/index.mdx
+++ b/posts/2020-01-12-blog/index.mdx
@@ -3,6 +3,7 @@ title: Setting up this blog
 date: 2020-01-12
 published: true
 tags: [meta, tech]
+pinned: false
 ---
 
 So, another attempt to start a blog.
@@ -22,10 +23,11 @@ On the technical side, I want it to...
 * support Markdown and (preferably) Org-mode input,
 * deploy to Github Pages (which requires output a site without backend))
 
-I have looked into Nikola, org-publish, Jeckyll and the likes, but never really liked in.
+I have looked into Nikola, org-publish, Jeckyll and the likes, but never really liked one.
 
 So now I have decided to see if I can start one from scratch, based on Gatsby:
 
 1. I started off with this [fantastic tutorial](https://www.freecodecamp.org/news/build-a-developer-blog-from-scratch-with-gatsby-and-mdx/).
 2. I added a [Github pages publish workflow](https://github.com/marketplace/actions/deploy-to-github-pages) (inspired by [gatsby-starter-olga](https://github.com/orgapp/gatsby-starter-orga/blob/master/.github/workflows/ci.yml)). I also needed to [create a personal access token](https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line) and [store it as a secret](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets).
 3. I added comments, using [utteranc.es](https://utteranc.es/) through [react-utterances](https://github.com/b6pzeusbc54tvhw5jgpyw8pwz2x6gs/react-utterances).
+4. I added tags, archive and pinned pages myself.
