Added scripting and about me posts

--- a/posts/2020-01-13-node streams/index.mdx
+++ b/posts/2020-01-13-node streams/index.mdx
@@ -2,7 +2,7 @@
 title: Node Streams
 date: 2020-01-13
 tags: [node, research]
-published: true
+published: false
 ---
 
 I am looking into a way to do ETL (Extract, Transform, Load) in Node. It seams to me that Streams are a very natural way to do this. However, Streams only seem to support simple pipelines of the form:
