--- a/posts/2020-01-12-blog/index.mdx
+++ b/posts/2020-01-12-blog/index.mdx
@@ -3,31 +3,34 @@ title: Setting up this blog
 date: 2020-01-12
 published: true
 tags: [meta, tech]
-pinned: false
 ---
-
-So, another attempt to start a blog.
 
 I have been looking for a platform to blog. It should support...
 
 * templates,
 * comments (without tracking, ads or vendor lock-in),
 * tags,
-* history and
+* archive,
+* RSS/Atom feeds and
 * search. 
 
-On the technical side, I want it to...
+On the technical side, I [want](/2020-01-01-about%20me/) it to...
 
 * be open source, 
 * allow me to edit the posts locally in any editor I please (which requires flat-file input),
 * support Markdown and (preferably) Org-mode input,
+* maintain version history of the content
 * deploy to Github Pages (which requires output a site without backend))
 
-I have looked into Nikola, org-publish, Jeckyll and the likes, but never really liked one.
+I have looked into [Nikola](https://getnikola.com/), [org-publish](https://orgmode.org/manual/Publishing.html), [Jekyll](https://jekyllrb.com/) and the likes, but never really liked one.
 
-So now I have decided to see if I can start one from scratch, based on Gatsby:
+So now I have decided to see if I can start one from scratch, based on [Gatsby](http://gatsbyjs.org/):
 
-1. I started off with this [fantastic tutorial](https://www.freecodecamp.org/news/build-a-developer-blog-from-scratch-with-gatsby-and-mdx/).
+1. I started off with this [excellent tutorial](https://www.freecodecamp.org/news/build-a-developer-blog-from-scratch-with-gatsby-and-mdx/).
 2. I added a [Github pages publish workflow](https://github.com/marketplace/actions/deploy-to-github-pages) (inspired by [gatsby-starter-olga](https://github.com/orgapp/gatsby-starter-orga/blob/master/.github/workflows/ci.yml)). I also needed to [create a personal access token](https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line) and [store it as a secret](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets).
 3. I added comments, using [utteranc.es](https://utteranc.es/) through [react-utterances](https://github.com/b6pzeusbc54tvhw5jgpyw8pwz2x6gs/react-utterances).
 4. I added tags, archive and pinned pages myself.
+
+I have decided against adding org-mode support with [gatsby-transformer-orga](https://www.gatsbyjs.org/packages/gatsby-transformer-orga/), because I couldn't figure out an elegant way to support multiple input formats.
+
+This leaves RSS/Atom feeds and search as final wishes.
