--- a/posts/2020-01-12-blog/index.mdx
+++ b/posts/2020-01-12-blog/index.mdx
@@ -11,7 +11,7 @@ I have been looking for a platform to blog. It should support...
 * comments (without tracking, ads or vendor lock-in),
 * tags,
 * archive,
-* RSS/Atom feeds and
+* feeds (RSS or Atom) and
 * search. 
 
 On the technical side, I [want](/2020-01-01-about%20me/) it to...
@@ -33,4 +33,4 @@ So now I have decided to see if I can start one from scratch, based on [Gatsby](
 
 I have decided against adding org-mode support with [gatsby-transformer-orga](https://www.gatsbyjs.org/packages/gatsby-transformer-orga/), because I couldn't figure out an elegant way to support multiple input formats.
 
-This leaves RSS/Atom feeds and search as final wishes.
+This leaves feeds and search as final wishes.
