Added post Peter Principle

--- a/posts/2020-01-01-about me/index.mdx
+++ b/posts/2020-01-01-about me/index.mdx
@@ -11,7 +11,7 @@ I am a software engineer, living in the Netherlands. I was born almost 50 years 
 
 I develop software; mostly websites, but also the occasional CLI or daemon. [Python](https://www.python.org/) has long been my go to programming language, but I find I am moving more and more towards [Javascript](https://developer.mozilla.org/en-US/docs/Web/JavaScript). Lately I am even drawn to [Typescript](http://www.typescriptlang.org/).
 
-I prefer _open technologies_: I use open source software (OSS) whenever I can. And practically the only times that I can't involve working together with others on Microsoft Office documents. My preferred tools include:
+I prefer _open technologies_: I use open source software (OSS) whenever I can. And practically the only times that I can't, involve working together with others on Microsoft Office documents. My preferred tools include:
 
 - [Ubuntu](https://www.ubuntu.com/), but sometimes I need to work on Windows. Therefore, all my tools preferably work on both.
 - I bounce back and forth between [Emacs](https://emacs.org) and [VS Code](https://code.visualstudio.com/) for code editing.
